--- a/predictor.css
+++ b/predictor.css
@@ -1,38 +1,52 @@
 body {
 	font-family : Verdana, Arial , Helvetica;
+	background : pink;
 }
-table{width : 100%;}
 .predictor {
 	max-width : 300px;
+	height : 250px;
+	position : relative;
+	margin : auto;
+	/*delete when done*/
+	border : 1px solid black;
+	background : white;
 }
 .fixture {
-	position : relative;
-	padding : 12px;
-	height : 94px;
+	position : absolute;
+	height : 140px;
+	width : 100%;
 	font-weight : bold;
+	/*delete when done*/
 }
 .fixture span {
 	position : absolute;
 	margin : auto;
-	width : 30px;
-	top : 12px;
-	left : 62px;
-	right : 62px;
-	line-height : 70px;
+	width : 20%;
+	top : 45px;
+	left : 0;
+	right : 0;
+	margin : auto;
+	line-height : 50px;
 	vertical-align : center;
 	text-align : center;
 	color : #c8c8c8;
 }
-.fixture a.statslink {
+a.statslink {
 	display : block;
 	position : absolute;
-	top : 0;
+	top : 15px;
 	left : 0;
 	right : 0;
-	width : 20px;
+	width : 20%;
 	padding-top : 20px;
+	font-size : 8px;
+	line-height : 8px;
+	text-transform : uppercase;
+	text-decoration : none;
 	margin : auto;
 	background : url("statistics.png") top center no-repeat;
+	text-align : center;
+	z-index: 200;
 
 }
 .prediction {
@@ -41,14 +55,16 @@ table{width : 100%;}
 	margin : 0;
 	padding : 0;
 	width : 100%;
-	border : 1px solid black;
 }
 .home , .away {
 	position : absolute;
 	top : 12px;
 	overflow : hidden;
-	width : 50px;
-	height : 70px;
+	width : 90px;
+	height : 30px;
+	background-color : #ccc;
+	padding-top : 90px;
+	text-align : center;
 }
 .home {
 	left : 12px;
@@ -56,7 +72,7 @@ table{width : 100%;}
 .away {
 	right : 12px;
 }
-.away a , .home a{
+/*.away a , .home a{
 	display : block;
 	height : 50px;
 	width : 50px;
@@ -65,21 +81,29 @@ table{width : 100%;}
 	background-size : cover;
 	text-decoration : none;
 	color : #222;
-}
+}*/
 #badge_MNU {
 	background-image : url("predictor_files/image.png");
 }
 #badge_STO {
 	background-image : url("predictor_files/image_006.png");
 }
-.play{
-	height : 80px;
+#play_container{
+	position : absolute;
+	width : 100%;
+	height : 110px;
 	margin : auto;
 	overflow : hidden;
-	background : red;
-	position : absolute;
-	top : 94px; 
+	top : 140px;
 	left : 0;
+
+}
+
+.play{
+	position : absolute;
+	padding-top : 18px;
+	background : url("votes_so_far.png") top center no-repeat;
+	width : 100%;
 }
 .play div{
 	width : 31%;
@@ -109,10 +133,29 @@ table{width : 100%;}
 	color : #fff;
 	font-weight : bold;
 	width : 90%;
+	cursor : pointer;
+}
+.score{
+	position : absolute;
+	width : 100%;
+	height : 100%;
+	opacity : 0;
+	left : 100%;
+	background : cyan;
+	text-align : center;
 }
 .stats {
 	clear : both;
 	display : none;
+	background : #fff;
+	position : absolute;
+	top : 250px;
+	left : -1px;
+	width : 100%;
+	margin : 0;
+	border-left : 1px solid black;
+	border-right : 1px solid black;
+	border-bottom : 1px solid black;
 }
 .stats .legend {
 	width : 70%;
