--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,6 @@
 .spinBox{
   position      : relative;
   display       : inline-block;
-  padding-right : 0.875em;
   border-radius : 0.25em;
   box-shadow    : 0 0.0625em 0 rgba(255,255,255,0.5);
 }
@@ -10,15 +9,11 @@
   display                   : block;
   height                    : 1.5625em;
   padding                   : 0 0.25em;
-  border                    : 0.0625em solid rgb(224,224,224);
-  border-right              : none;
-  border-top-left-radius    : 0.25em;
-  border-bottom-left-radius : 0.25em;
   color                     : rgb(64,64,64);
   font-family               : inherit;
   font-size                 : 1em;
-  text-align                : right;
   box-shadow                : 0 0.125em 0.125em rgba(0,0,0,0.03125) inset;
+  width : 32px;
 }
 
 .spinBox input[disabled]{
@@ -28,7 +23,6 @@
 .spinBoxUp,
 .spinBoxDown{
   position         : absolute;
-  right            : 0;
   display          : block;
   width            : 0.75em;
   height           : 0.75em;
@@ -38,7 +32,31 @@
   background-image :         linear-gradient(rgb(248,248,248),rgb(240,240,240));
   cursor           : pointer;
 }
+#homeGoals.spinBox {
+}
+#awayGoals.spinBox {
+}
+#homeGoals .spinBoxUp , #homeGoals .spinBoxDown{
+  left : 0;
+}
+#homeGoals.spinBox input { 
+  text-align : right;
+  border                    : 0.0625em solid rgb(224,224,224);
+  border-left              : none;
+  border-top-right-radius    : 0.25em;
+  border-bottom-right-radius : 0.25em;
+}
+#awayGoals.spinBox input { 
+  text-align : left;
+  border                    : 0.0625em solid rgb(224,224,224);
+  border-right              : none;
+  border-top-left-radius    : 0.25em;
+  border-bottom-left-radius : 0.25em;
+}
 
+#awayGoals .spinBoxUp , #awayGoals .spinBoxDown{
+  right : 0;
+}
 .spinBox input[disabled] + span,
 .spinBox input[disabled] + span + span{
   background : rgb(240,240,240);
