--- a/predictor.css
+++ b/predictor.css
@@ -61,7 +61,6 @@ a.statslink {
 	overflow : hidden;
 	width : 90px;
 	height : 30px;
-	background-color : #333;
 	padding-top : 90px;
 	text-align : center;
 }
@@ -71,23 +70,13 @@ a.statslink {
 .away {
 	right : 12px;
 }
-/*.away a , .home a{
-	display : block;
-	height : 50px;
-	width : 50px;
-	margin : auto;
-	text-align : center;
-	background-size : cover;
-	text-decoration : none;
-	color : #222;
-}*/
 #badge_MNU {
 	background-image : url("predictor_files/image.png");
 }
 #badge_STO {
 	background-image : url("predictor_files/image_006.png");
 }
-#play_container{
+#play_container , .play_container{
 	position : absolute;
 	width : 100%;
 	height : 110px;
@@ -119,7 +108,7 @@ a.statslink {
 	padding : 3%;
 	border-radius : 6px 6px 0 0;
 }
-.play button {
+button {
 	display : block;
 	border-radius: 6px;
 	font-size: 17px;
@@ -131,8 +120,10 @@ a.statslink {
 	text-transform : uppercase;
 	color : #fff;
 	font-weight : bold;
-	width : 90%;
 	cursor : pointer;
+}
+.play button {
+	width : 90%;
 }
 .score{
 	position : absolute;
@@ -140,8 +131,26 @@ a.statslink {
 	height : 100%;
 	opacity : 0;
 	left : 100%;
-	background : cyan;
 	text-align : center;
+}
+.selectScore{
+	position : absolute;
+	width : 100%;
+	height : 100%;
+	opacity : 0;
+	left : 100%;
+}
+.selectScore button {
+	height : 44px;
+	padding : 9px;
+	margin-top : 50px;
+	width : 40%;
+}
+.selectScore .home , .selectScore .away {
+	padding : 0;
+}
+.selectScore div div{
+	/*width : 40px;*/
 }
 .stats {
 	clear : both;
