--- a/predictor.css
+++ b/predictor.css
@@ -127,7 +127,7 @@ button {
 .play button {
 	width : 90%;
 }
-.score{
+.selectScore , .score {
 	position : absolute;
 	width : 100%;
 	height : 100%;
@@ -135,24 +135,38 @@ button {
 	left : 100%;
 	text-align : center;
 }
-.selectScore{
+/*.selectScore
+{
 	position : absolute;
 	width : 100%;
 	height : 100%;
 	opacity : 0;
 	left : 100%;
-}
-.selectScore button {
+}*/
+.selectScore button , .score button {
 	height : 44px;
 	padding : 9px;
-	margin-top : 50px;
 	width : 40%;
+}
+.selectScore button {
+	margin-top : 50px;
+}
+.score .result {
+	font-weight : bold;
+	font-size : 1.3em;
+}
+.score button {
+	width : 80%;
+	margin-top : 8px;
+}
+.score .scoreAction {
+	float : left;
+	width : 48%;
+	font-size : 11px;
+	padding : 1%;
 }
 .selectScore .home , .selectScore .away {
 	padding : 0;
-}
-.selectScore div div{
-	/*width : 40px;*/
 }
 .stats {
 	clear : both;
