--- a/predictor.css
+++ b/predictor.css
@@ -1,8 +1,4 @@
-body {
-	font-family : Verdana, Arial , Helvetica;
-	background : pink;
-}
-.predictor {
+#predictor.predictor {
 	max-width : 300px;
 	height : 250px;
 	position : relative;
@@ -11,14 +7,14 @@ body {
 	border : 1px solid black;
 	background : white;
 }
-.fixture {
+#predictor .fixture {
 	position : absolute;
 	height : 140px;
 	width : 100%;
 	font-weight : bold;
 	/*delete when done*/
 }
-.fixture span {
+#predictor .fixture span {
 	position : absolute;
 	margin : auto;
 	width : 20%;
@@ -31,7 +27,7 @@ body {
 	text-align : center;
 	color : #c8c8c8;
 }
-a.statslink {
+#predictor a.statslink {
 	display : block;
 	position : absolute;
 	top : 15px;
@@ -48,14 +44,14 @@ a.statslink {
 	text-align : center;
 
 }
-.prediction {
+#predictor .prediction {
 	position : relative;
 	border : 0;
 	margin : 0;
 	padding : 0;
 	width : 100%;
 }
-.home , .away {
+#predictor .home ,#predictor .away {
 	position : absolute;
 	top : 12px;
 	overflow : hidden;
@@ -64,10 +60,10 @@ a.statslink {
 	padding-top : 90px;
 	text-align : center;
 }
-.home {
+#predictor .home {
 	left : 12px;
 }
-.away {
+#predictor .away {
 	right : 12px;
 }
 #badge_MNU {
@@ -78,7 +74,7 @@ a.statslink {
 	background-image : url("images/STO.png");
 	background-repeat : no-repeat;
 }
-#play_container , .play_container{
+#play_container ,#predictor .play_container{
 	position : absolute;
 	width : 100%;
 	height : 110px;
@@ -89,18 +85,18 @@ a.statslink {
 
 }
 
-.play{
+#predictor .play{
 	position : absolute;
 	padding-top : 18px;
 	background : url("votes_so_far.png") top center no-repeat;
 	width : 100%;
 }
-.play div{
+#predictor .play div{
 	width : 31%;
 	margin : 1%;
 	float : left;
 }
-.play label {
+#predictor .play label {
 	display : block;
 	background : #f0f0f0;
 	color : #a3a3a3;
@@ -110,7 +106,7 @@ a.statslink {
 	padding : 3%;
 	border-radius : 6px 6px 0 0;
 }
-button {
+#predictor button {
 	display : block;
 	border-radius: 6px;
 	font-size: 17px;
@@ -124,10 +120,10 @@ button {
 	font-weight : bold;
 	cursor : pointer;
 }
-.play button {
+#predictor .play button {
 	width : 90%;
 }
-.selectScore , .score {
+#predictor .selectScore ,#predictor .score {
 	position : absolute;
 	width : 100%;
 	height : 100%;
@@ -143,32 +139,32 @@ button {
 	opacity : 0;
 	left : 100%;
 }*/
-.selectScore button , .score button {
+#predictor .selectScore button ,#predictor .score button {
 	height : 44px;
 	padding : 9px;
 	width : 40%;
 }
-.selectScore button {
+#predictor .selectScore button {
 	margin-top : 50px;
 }
-.score .result {
+#predictor .score .result {
 	font-weight : bold;
 	font-size : 1.3em;
 }
-.score button {
+#predictor .score button {
 	width : 80%;
 	margin-top : 8px;
 }
-.score .scoreAction {
+#predictor .score .scoreAction {
 	float : left;
 	width : 48%;
 	font-size : 11px;
 	padding : 1%;
 }
-.selectScore .home , .selectScore .away {
+#predictor .selectScore .home , #predictor .selectScore .away {
 	padding : 0;
 }
-.stats {
+#predictor .stats {
 	clear : both;
 	display : none;
 	background : #fff;
@@ -181,18 +177,18 @@ button {
 	border-right : 1px solid black;
 	border-bottom : 1px solid black;
 }
-.stats .legend {
+#predictor .stats .legend {
 	width : 70%;
 }
-.stats .team_record {
+#predictor .stats .team_record {
 	text-align : left;
 	text-transform : uppercase;
 }
-.stats th{
+#predictor .stats th{
 	text-align : left;	
 	font-size : 0.9em;
 }
-.stats td{
+#predictor .stats td{
 	font-size : 0.8em;
 	overflow : hidden;
 }
