Refactoring of view classes - they are now output but they are not being transformed correctly.

--- a/predictor.css
+++ b/predictor.css
@@ -166,7 +166,7 @@
 }
 #predictor .stats {
 	clear : both;
-	display : none;
+	/*display : none;*/
 	background : #fff;
 	position : absolute;
 	top : 250px;
