--- a/predictor.css
+++ b/predictor.css
@@ -44,13 +44,6 @@
 	text-align : center;
 
 }
-#predictor .prediction {
-	position : relative;
-	border : 0;
-	margin : 0;
-	padding : 0;
-	width : 100%;
-}
 #predictor .home ,#predictor .away {
 	position : absolute;
 	top : 12px;
@@ -74,7 +67,7 @@
 	background-image : url("images/STO.png");
 	background-repeat : no-repeat;
 }
-#play_container ,#predictor .play_container{
+.prediction {
 	position : absolute;
 	width : 100%;
 	height : 110px;
@@ -85,18 +78,18 @@
 
 }
 
-#predictor .play{
+#predictor .select-result{
 	position : absolute;
 	padding-top : 18px;
 	background : url("votes_so_far.png") top center no-repeat;
 	width : 100%;
 }
-#predictor .play div{
+#predictor .select-result div{
 	width : 31%;
 	margin : 1%;
 	float : left;
 }
-#predictor .play label {
+#predictor .select-result label {
 	display : block;
 	background : #f0f0f0;
 	color : #a3a3a3;
@@ -120,10 +113,10 @@
 	font-weight : bold;
 	cursor : pointer;
 }
-#predictor .play button {
+#predictor .select-result button {
 	width : 90%;
 }
-#predictor .selectScore ,#predictor .score {
+#predictor .select-score ,#predictor .result-selected {
 	position : absolute;
 	width : 100%;
 	height : 100%;
@@ -131,7 +124,7 @@
 	left : 100%;
 	text-align : center;
 }
-/*.selectScore
+/*.select-score
 {
 	position : absolute;
 	width : 100%;
@@ -139,34 +132,34 @@
 	opacity : 0;
 	left : 100%;
 }*/
-#predictor .selectScore button ,#predictor .score button {
+#predictor .select-score button ,#predictor .result-selected button {
 	height : 44px;
 	padding : 9px;
 	width : 40%;
 }
-#predictor .selectScore button {
+#predictor .select-score button {
 	margin-top : 50px;
 }
-#predictor .score .result {
+#predictor .result-selected .result {
 	font-weight : bold;
 	font-size : 1.3em;
 }
-#predictor .score button {
+#predictor .result-selected button {
 	width : 80%;
 	margin-top : 8px;
 }
-#predictor .score .scoreAction {
+#predictor .result-selected .scoreAction {
 	float : left;
 	width : 48%;
 	font-size : 11px;
 	padding : 1%;
 }
-#predictor .selectScore .home , #predictor .selectScore .away {
+#predictor .select-score .home , #predictor .select-score .away {
 	padding : 0;
 }
 #predictor .stats {
 	clear : both;
-	/*display : none;*/
+	display : none;
 	background : #fff;
 	position : absolute;
 	top : 250px;
